<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/nthree"
android:fillViewport="true" >
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:gravity="center_vertical"
android:orientation="vertical"
android:padding="30dp" >
<TextView
android:id="@+id/tvPhoto"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="10dp"
android:text="@string/takaaphoto"
android:textAppearance="?android:attr/textAppearanceMedium"
android:textColor="#000000"
android:textStyle="bold"
android:typeface="monospace" />

<Button
    android:id="@+id/btnTakePhoto"
    android:layout_width="223dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:onClick="dispatchTakePictureIntent"
    android:padding="14dp"
    android:text="@string/Captureaphoto"
    android:textColor="#ffffff"
    android:typeface="monospace" />

<ImageView
android:id="@+id/ivTakePhoto"
android:layout_width="match_parent"
android:layout_height="150dp"
android:src="@drawable/photo"
android:background="@drawable/nthree" />
<TextView
android:id="@+id/tvetLatitude"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="10dp"
android:text="@string/latitude"
android:textAppearance="?android:attr/textAppearanceMedium"
android:textColor="#000000"
android:textStyle="bold"
android:typeface="monospace" />
<EditText
android:id="@+id/etLatitude"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:ems="10"
android:inputType="numberDecimal"
android:textColor="#000000" />
<TextView
android:id="@+id/tvetLongitude"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="10dp"
android:text="@string/longtitude"
android:textAppearance="?android:attr/textAppearanceMedium"
android:textColor="#000000"
android:textStyle="bold"
android:typeface="monospace" />
<EditText
android:id="@+id/etLongitude"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:ems="10"
android:inputType="numberDecimal"
android:textColor="#000000" />
<TextView
android:id="@+id/tvetDescription"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="10dp"
android:text="@string/remarks"
android:textAppearance="?android:attr/textAppearanceMedium"
android:textColor="#000000"
android:textStyle="bold"
android:typeface="monospace" />
<EditText
android:id="@+id/etDescription"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:ems="10"
android:inputType="textMultiLine"
android:textColor="#000000" />
<Button
android:id="@+id/btnInsert"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_gravity="center"
android:layout_marginTop="20dp"

android:onClick="insertData"
android:padding="14dp"
android:text="@string/Save"
android:textColor="#ffffff"
android:typeface="monospace" />
</LinearLayout>
</ScrollView>
