
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/nfive"
android:orientation="vertical" >
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="10dp"
android:layout_marginBottom="10dp"
android:orientation="horizontal" >
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_weight="1"
android:background="@drawable/black"
android:gravity="center"
android:orientation="vertical" >

<TextView
    android:id="@+id/tvMyVisitingPlacesList"
    android:layout_width="wrap_content"
    android:layout_height="56dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/nfour"
    android:paddingBottom="10dp"
    android:paddingLeft="13dp"
    android:text="@string/header"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textColor="#000000"
    android:textStyle="bold"
    android:typeface="monospace" />

</LinearLayout>

<LinearLayout
    android:layout_width="181dp"
    android:layout_height="65dp"
    android:background="@drawable/nfour"
 
    android:orientation="vertical" >

<TextView
android:id="@+id/tvMyCurrentPosition"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/myCurrentLocation"
android:textColor="#000000"
android:paddingLeft="13dp"
android:layout_marginRight="5dp"
android:textStyle="bold"
android:typeface="monospace" />
<TextView
android:id="@+id/tvMyCurrentPositionLat"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginRight="5dp"
android:paddingLeft="13dp"
android:text="@string/lat"
android:textColor="#000000"
android:textSize="11sp" />
<TextView
android:id="@+id/tvMyCurrentPositionLong"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:paddingLeft="13dp"
android:layout_marginRight="5dp"
android:text="@string/longi"
android:textColor="#000000"
android:textSize="11sp" />
</LinearLayout>
</LinearLayout>
<LinearLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="vertical" >
<ListView
android:id="@+id/lvPlacesList"
android:layout_width="match_parent"
android:layout_height="wrap_content" >
</ListView>
</LinearLayout>
</LinearLayout>
